--- a/_layouts/docwithnav.html
+++ b/_layouts/docwithnav.html
@@ -41,16 +41,20 @@ The code is a little roundabout for a few reasons:
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="docsearch:version" content="{{page.version}}">
     <!-- {% if page.no_canonical != true %}<link rel="canonical" href="{{site.url}}{{page.url | replace:page.version,'latest'}}" />{% endif %} -->
     <link rel="shortcut icon" type="image/png" href="{{site.baseurl}}/images/favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Roboto+Mono' type='text/css'>
     <link rel="stylesheet" href="{{site.baseurl}}/css/style.css"/>
+    <link rel="stylesheet" href="{{site.baseurl}}/css/search.css"/>
     <link rel="stylesheet" href="{{site.baseurl}}/css/plugins/offcanvas.css"/>
+    <link rel="stylesheet" href="{{site.baseurl}}/css/instantsearch/instantsearch.min.css"/>
     <link href="https://www.projectcalico.org/wp-content/themes/dante/css/font-awesome.min.css" rel="stylesheet">
     <script src="{{site.baseurl}}/js/jquery-2.2.0.min.js"></script>
     <script src="{{site.baseurl}}/js/bootstrap/bootstrap.min.js"></script>
+    <script src="{{site.baseurl}}/js/instantsearch/instantsearch.min.js"></script>
     <script src="{{site.baseurl}}/js/script.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -132,22 +136,15 @@ The code is a little roundabout for a few reasons:
           </p>
           <div class="col-xs-6 col-sm-4 col-md-3 sidebar-offcanvas">
             <div class="row">
-              <script>
-                (function() {
-                  var cx = '006142519575987378096:_kqrwt6swpa';
-                  var gcse = document.createElement('script');
-                  gcse.type = 'text/javascript';
-                  gcse.async = true;
-                  gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-                  var s = document.getElementsByTagName('script')[0];
-                  s.parentNode.insertBefore(gcse, s);
-                })();
-              </script>
-              <gcse:search></gcse:search>
+              <div class="search-input-container" data-toggle="popover" data-placement="bottom"></div>
+              <div class="search-container">
+                <div class="search-container__results"></div>
+                <div class="search-container__pagination"></div>
+              </div>
             </div>
             <div id="sidebar">
-            	{% include sidebar.html sidebar=this_pages_navbar.toc prefix="nav" %}
-			</div>
+              {% include sidebar.html sidebar=this_pages_navbar.toc prefix="nav" %}
+            </div>
           </div>
           <div class="col-xs-12 col-sm-8 col-md-9">
             <div id="content-main">
@@ -162,5 +159,60 @@ The code is a little roundabout for a few reasons:
         </div>
       </div>
     </section>
+
+    <script src="{{site.baseurl}}/js/searchConfig.js"></script>
+
+    <script type="text/template" id="search-results-template">
+      {% raw %}
+      <div class="search-results">
+        {{#hits}}
+
+        {{#shouldDisplayTopCategory}}
+        {{#hierarchy.lvl0}}
+          <a href="{{url}}" class="search-results__group-header">
+            {{{_highlightResult.hierarchy.lvl0.value}}}
+          </a>
+        {{/hierarchy.lvl0}}
+        {{/shouldDisplayTopCategory}}
+
+        <div class="search-results__search-result search-result columns-layout">
+          <div class="columns-layout__left-column">
+            {{#hierarchy.lvl1}}
+              <a href="{{url}}" class="search-result__subcategory">
+                {{{_highlightResult.hierarchy.lvl1.value}}}
+              </a>
+            {{/hierarchy.lvl1}}
+          </div>
+
+          <div class="columns-layout__right-column">
+            {{#hierarchy.lvl2}}
+              <a href="{{url}}" class="search-result__subsubcategory">
+                {{{_highlightResult.hierarchy.lvl2.value}}}
+              </a>
+            {{/hierarchy.lvl2}}
+
+            {{#hierarchy.lvl3}}
+              <a href="{{url}}" class="search-result__subsubsubcategory">
+                {{{_highlightResult.hierarchy.lvl3.value}}}
+              </a>
+            {{/hierarchy.lvl3}}
+
+            {{#content}}
+              <a href="{{url}}" class="search-result__content">
+                {{{_snippetResult.content.value}}}
+              </a>
+            {{/content}}
+          </div>
+        </div>
+        {{/hits}}
+      </div>
+      {% endraw %}
+    </script>
+
+    <script>
+      $(document).ready(function() {
+        window.initializeSearch('{{page.version}}', '.search-input-container', '.search-container', '.search-container__results', '.search-container__pagination');
+      });
+    </script>
   </body>
 </html>
