Fix quick code copy button

--- a/_layouts/docwithnav.html
+++ b/_layouts/docwithnav.html
@@ -55,7 +55,7 @@ The code is a little roundabout for a few reasons:
     <script src="{{site.baseurl}}/js/bootstrap/bootstrap.min.js"></script>
     <script src="{{site.baseurl}}/js/instantsearch/instantsearch.min.js"></script>
     <script src="{{site.baseurl}}/js/script.js"></script>
-{% if page.version != "v1.5" and page.version != "v1.6" and page.version != "v2.0" and page.version != "v2.1" and page.version != "v2.2" and page.version != "v2.3" and page.version != "v2.4" and page.version != "v2.5" and page.version != "v2.6" and page.version != "v3.0" and page.version != "v3.1" and page.version != "v3.2" and page.version != "v3.3" %}
+{% if page.version != "v2.1" %}
     <script src="{{site.baseurl}}/js/clipboard.min.js"></script>
     <script src="{{site.baseurl}}/js/code-select.js"></script>
 {% endif %}
